[gd_scene load_steps=2 format=3 uid="uid://card_stack_scene"]

[ext_resource type="Script" path="res://scripts/gameplay/card_stack.gd" id="1"]

[node name="CardStack" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="StackCounter" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Panel" type="Panel" parent="StackCounter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CountLabel" type="Label" parent="StackCounter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
